--- a/.env.dist
+++ b/.env.dist
@@ -5,3 +5,7 @@ DB_PORT=5432
 DB_NAME=golang
 DB_USER=golang
 DB_PASSWORD=golang
+
+DB_LOG_MODE_ENABLED=false
+
+ROOT_DIR=/home/andersen/go/src/github.com/JILeXanDR/golang
