--- a/.env.dist
+++ b/.env.dist
@@ -9,3 +9,4 @@ DB_PASSWORD=golang
 DB_LOG_MODE_ENABLED=false
 
 ROOT_DIR=/home/andersen/go/src/github.com/JILeXanDR/golang
+GOOGLE_MAPS_API_KEY=AIzaSyCrtqc0wQ4sdZ1LYUPUFQuz2xMGBlxDHOc
