--- a/.env.dist
+++ b/.env.dist
@@ -10,3 +10,5 @@ DB_LOG_MODE_ENABLED=false
 
 ROOT_DIR=/home/andersen/go/src/github.com/JILeXanDR/golang
 GOOGLE_MAPS_API_KEY=AIzaSyCrtqc0wQ4sdZ1LYUPUFQuz2xMGBlxDHOc
+MOBIZON_API_KEY=PUT_API_KEY_HERE
+FAKE_SMS=true
